Added mdx content for the articles

--- a/src/posts/my-second-post/index.mdx
+++ b/src/posts/my-second-post/index.mdx
@@ -1,42 +1,28 @@
 ---
-title: My Second Post! I'm Liking This...
+title: The Languages of the Web
 slug: my-second-post
-date: 2020-03-22
-featureImage: mountains.jpg
-excerpt: Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra.
+date: 2020-08-29
+featureImage: web-languages.jpg
+excerpt: You don’t need to know how to code to know your website is a crucial component of your business and marketing strateg...
 ---
 
-# Heading 1
+## Why Is a Basic Understanding Important?
 
-## Heading 2
+You don’t need to know how to code to know your website is a crucial component of your business and marketing strategies.
 
-### Heading 3
+By understanding a few things, however, you may feel like you and your designer can have a coherent conversation – and you can more clearly express your needs.
 
-#### Heading 4
+You may believe you can simply tell a designer want you to want, and poof – like magic – it happens. Sometimes, that is the case, but when things aren’t going so smoothly, it can help to understand why.
 
-##### Heading 5
+Technology keeps marching – as it changes, it helps to know why developers might need to change your site to keep it current.
 
-###### Heading 6
+Businesses and web developers are always rethinking their design and making changes to keep up with Google updates, trending designs, and more.
+### The most common order to learn is:
+1. HTML
+2. CSS
+3. JavaScript
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. `Consectetur pulvinar consequat hendrerit nulla et tempor neque`, risus. Mauris nulla at imperdiet duis sit euismod quis augue. Quam convallis porta pharetra consequat diam laoreet enim.
-
----
-
-Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt porttitor suspendisse dolor aliquam, sodales. Consequat, amet, et urna, habitant nibh tincidunt viverra sed sed. **Amet tortor euismod ut in nulla viverra in**. Proin gravida.
-
-> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
-
-[Lorem ipsum dolor sit amet](https://www.google.com/), consectetur adipiscing elit. Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra. Est at pretium facilisis cursus leo. Et massa tincidunt velit donec. Erat elementum nibh.
-
-1. Showcase and embed your work with
-2. Showcase and embed your work with
-3. Showcase and embed your work with
-
-- Showcase and embed your work with
-- Showcase and embed your work with
-- Showcase and embed your work with
-
-![Mountains Photo](mountains.jpg)
+![Web Languages](web-languages.jpg)
 
 ```html
 <div>Hello World</div>
