--- a/src/posts/my-third-post/index.mdx
+++ b/src/posts/my-third-post/index.mdx
@@ -1,42 +1,20 @@
 ---
-title: Do I Want To Keep Doing This?
+title: Should You Learn Python in 2020?
 slug: my-third-post
-date: 2020-03-23
-featureImage: river.jpg
-excerpt: Enim nunc amet, eu, vitae nunc. Et in elementum aliquet nunc mauris, nulla. Convallis viverra neque quam mi sit.
+date: 2020-09-23
+featureImage: python.jpg
+excerpt: Well, things have changed a lot since then. In 2016, Python replaced Java as the most popular language in colleges and Universities...
 ---
 
-# Heading 1
+## Yes, You Should! And Here's Why.
 
-## Heading 2
+Well, things have changed a lot since then. In 2016, Python replaced Java as the most popular language in colleges and Universities, and since then, it has never looked back.
 
-### Heading 3
+Python is growing and growing big time. If you read programming and technology news or blog post, then you might have noticed the rise of Python as many popular developer communities, including StackOverFlow and CodeAcademy has mentioned the rise of Python as a major programming language.
 
-#### Heading 4
 
-##### Heading 5
 
-###### Heading 6
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. `Consectetur pulvinar consequat hendrerit nulla et tempor neque`, risus. Mauris nulla at imperdiet duis sit euismod quis augue. Quam convallis porta pharetra consequat diam laoreet enim.
-
----
-
-Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt porttitor suspendisse dolor aliquam, sodales. Consequat, amet, et urna, habitant nibh tincidunt viverra sed sed. **Amet tortor euismod ut in nulla viverra in**. Proin gravida.
-
-> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
-
-[Lorem ipsum dolor sit amet](https://www.google.com/), consectetur adipiscing elit. Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra. Est at pretium facilisis cursus leo. Et massa tincidunt velit donec. Erat elementum nibh.
-
-1. Showcase and embed your work with
-2. Showcase and embed your work with
-3. Showcase and embed your work with
-
-- Showcase and embed your work with
-- Showcase and embed your work with
-- Showcase and embed your work with
-
-![River Photo](river.jpg)
+![Python Logo](python.jpg)
 
 ```html
 <div>Hello World</div>
