--- a/src/posts/my-first-post/index.mdx
+++ b/src/posts/my-first-post/index.mdx
@@ -1,42 +1,23 @@
 ---
-title: My First Post! Hello World!
+title: Is it worth to learn OOP as a Web Dev?
 slug: my-first-post
-date: 2020-03-21
-featureImage: nature.jpg
-excerpt: Habitant pharetra, urna ipsum interdum risus nunc. Venenatis orci, sagittis, elementum urna.
+date: 2020-08-21
+featureImage: programming.jpg
+excerpt: OOP is great and allows us a tremendous amount of flexibility for having multiple systems interact...
 ---
 
-# Heading 1
+## Find Out Below!
 
-## Heading 2
+OOP is great and allows us a tremendous amount of flexibility for having multiple systems interacting with the same data / logic. However, there is certainly a situation in which you wouldn't want to bother loading up a lot of objects.. Namely, when you are simply pulling data for tabular display.
 
-### Heading 3
+Querying a database and getting a simple record set back that is immediately emitted to the browser usually doesn't need OOP involved. As a matter of fact you might want to sidestep OOP completely as tabular data usually involves a roll up of other information (sums of child records) and you normally don't want to pull more data from the database than what you are actually using. ie. if you are only showing the name and email you probably don't want to grab the user name as that is just wasted cycles.
 
-#### Heading 4
+### The only time I don't use OOP is when:
+1. I'm creating a simple project to test some logic. This usually leads to creating the right classes.
+2. I'm using Classic ASP
+3. I'm not programming.
 
-##### Heading 5
-
-###### Heading 6
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. `Consectetur pulvinar consequat hendrerit nulla et tempor neque`, risus. Mauris nulla at imperdiet duis sit euismod quis augue. Quam convallis porta pharetra consequat diam laoreet enim.
-
----
-
-Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt porttitor suspendisse dolor aliquam, sodales. Consequat, amet, et urna, habitant nibh tincidunt viverra sed sed. **Amet tortor euismod ut in nulla viverra in**. Proin gravida.
-
-> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
-
-[Lorem ipsum dolor sit amet](https://www.google.com/), consectetur adipiscing elit. Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra. Est at pretium facilisis cursus leo. Et massa tincidunt velit donec. Erat elementum nibh.
-
-1. Showcase and embed your work with
-2. Showcase and embed your work with
-3. Showcase and embed your work with
-
-- Showcase and embed your work with
-- Showcase and embed your work with
-- Showcase and embed your work with
-
-![Nature Photo](nature.jpg)
+![Programming](programming.jpg)
 
 ```html
 <div>Hello World</div>
